--- a/package.json
+++ b/package.json
@@ -13,13 +13,36 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
+    "clsx": "2.0.0",
+    "framer-motion": "10.16.4",
+    "lodash": "4.17.21",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@types/jest": "29.5.4",
+    "@typescript-eslint/eslint-plugin": "5.47.0",
+    "@typescript-eslint/parser": "5.47.0",
+    "babel-jest": "29.6.4",
+    "eslint": "8.30.0",
+    "eslint-config-next": "13.4.2",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-jest": "27.1.7",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.31.11",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-simple-import-sort": "8.0.0",
+    "eslint-plugin-storybook": "0.6.8",
+    "eslint-plugin-tailwindcss": "3.7.1",
+    "jest": "29.3.1",
+    "jest-environment-jsdom": "29.3.1",
+    "jest-junit": "15.0.0",
+    "prettier": "2.8.1",
+
+    "prettier-plugin-tailwindcss": "0.2.1",
+    "typescript": "4.9.4"
   }
 }
