--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "jest-environment-jsdom": "29.3.1",
     "jest-junit": "15.0.0",
     "prettier": "2.8.1",
-
     "prettier-plugin-tailwindcss": "0.2.1",
+    "prisma": "^5.2.0",
     "typescript": "4.9.4"
   }
 }
