--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "5.2.0",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -42,7 +43,7 @@
     "jest-junit": "15.0.0",
     "prettier": "2.8.1",
     "prettier-plugin-tailwindcss": "0.2.1",
-    "prisma": "^5.2.0",
+    "prisma": "5.2.0",
     "typescript": "4.9.4"
   }
 }
