--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://u0189115_ionetek:yT0cP1uN2byO7xM7@server112.hosting.reg.ru:3306/u0189115_vzhuh_dev?schema=public"
+SHADOW_DATABASE_URL="mysql://u0189115_ionetek:yT0cP1uN2byO7xM7@server112.hosting.reg.ru:3306/u0189115_vzhuh_dev_shadow?schema=public"
