--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.1.10",
     "@prisma/client": "5.2.0",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
@@ -21,9 +22,11 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-swipeable": "^7.0.1",
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
+    "@svgr/webpack": "8.0.1",
     "@types/jest": "29.5.4",
     "@typescript-eslint/eslint-plugin": "5.47.0",
     "@typescript-eslint/parser": "5.47.0",
