--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "clsx": "2.0.0",
+    "formik": "^2.4.4",
     "framer-motion": "10.16.4",
     "lodash": "4.17.21",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-swipeable": "^7.0.1",
-    "tailwindcss": "3.3.3"
+    "react-hot-toast": "2.4.1",
+    "react-swipeable": "7.0.1",
+    "tailwindcss": "3.3.3",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@svgr/webpack": "8.0.1",
