--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "10.16.4",
     "lodash": "4.17.21",
     "next": "13.4.19",
+    "nodemailer": "^6.9.5",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@svgr/webpack": "8.0.1",
     "@types/jest": "29.5.4",
+    "@types/nodemailer": "^6.4.9",
     "@typescript-eslint/eslint-plugin": "5.47.0",
     "@typescript-eslint/parser": "5.47.0",
     "babel-jest": "29.6.4",
