--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "clsx": "2.0.0",
+    "date-fns": "^2.30.0",
     "formik": "^2.4.4",
     "framer-motion": "10.16.4",
     "lodash": "4.17.21",
